# catapp

./: README.md  docker-compose.yaml
catapi/: Dockerfile  pyproject.toml
catapi/catapi/: api.py  data_models.py  settings.py
catmonitor/: Dockerfile  README.md  pyproject.toml
catmonitor/catmonitor/: catdisplay.py  settings.py
scripts/: fill_db.py  get_cat.py  print_db.py  pyproject.toml
