[tool.poetry]
name = "catapi"
version = "0.1.0"
description = ""
authors = ["Tristan Muscat"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
fastapi = "^0.110.1"
sqlalchemy = "^2.0.29"
pydantic = "^2.6.4"
uvicorn = "^0.29.0"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
